Many updates mostly to support files