@@ -1,8 +1,6 @@
 
 echo off
 
-REM IF YOU WANT THIS SCRIPT TO MAKE JAR FILES FOR JavaFX PROGRAMS, YOU NEED TO EDIT
-REM IT TO SET THE VALUE OF JAVAC_FX.  SEE COMMENTS ABOUT JAVA_FX BELOW.
 
 REM THIS DOS BATCH SCRIPT CREATES JAR FILES FOR EXAMPLE PROGRAMS. 
 REM IT USES SOURCE CODE FILES FROM THE "source" DIRECTORY OF THE WEB SITE.
@@ -18,19 +16,6 @@ REM CAN BE SET IN THE NEXT TWO LINES, FOR EXAMPLE GIVING FULL PATHS TO THE COMMA
 
 set JAVAC=javac
 set JAR=jar
-
-REM TO COMPILE PROGRAMS THAT USE JavaFX, JAVAC_FX MUST BE SET TO A javac COMMAND THAT 
-REM WILL WORK FOR COMPILING JavaFX PROGRAMS.  IF JAVAC_FX IS LEFT EQUAL TO none, NO JavaFX
-REM JAR FILES WILL BE PRODUCED. 
-
-set JAVAC_FX=none
-
-REM FOR EXAMPLE, YOU CAN UNCOMMENT THE SECOND LINE BELOW AND EDIT IT TO
-REM USE THE PATH TO THE JavaFX SDK lib DIRECTORY, IN PLACE OF C:\Uses\eck\javafx-sdk-11\lib
-REM (To uncomment a line, remove the REM at the beginning.)
-
-REM set JAVAC_FX=%JAVAC%
-REM set JAVAC_FX=%JAVAC% --module-path=C:\Users\eck\javafx-sdk-11\lib --add-modules=ALL-MODULE-PATH
 
 echo.
 
@@ -49,7 +34,7 @@ if exist compiled-jar-files (
    mkdir compiled-jar-files
 )
 
-call :buildFXjar chapter1 GUIDemo
+call :buildjar chapter1 GUIDemo
 call :buildtio chapter2 HelloWorld
 call :buildtio chapter2 PrintSquare
 call :buildtio chapter2 TimedComputation
@@ -67,66 +52,56 @@ call :buildtio chapter3 ComputeAverage2
 call :buildtio chapter3 AverageNumbersFromFile
 call :buildtio chapter3 BirthdayProblem
 call :buildtio chapter3 ReverseInputNumbers
-call :buildFXjar chapter3 SimpleGraphicsStarter
-call :buildFXjar chapter3 MovingRects
-call :buildFXjar chapter3 RandomCircles
+call :buildjar chapter3 SimpleGraphicsStarter
+call :buildjar chapter3 MovingRects
+call :buildjar chapter3 RandomCircles
 call :buildtio chapter4 GuessingGame
 call :buildtio chapter4 GuessingGame2
 call :buildtio chapter4 RowsOfChars
 call :buildtio chapter4 ThreeN2
-call :buildFXjar chapter4 RandomMosaicWalk Mosaic.java MosaicCanvas.java
+call :buildjar chapter4 RandomMosaicWalk Mosaic.java MosaicCanvas.java
 call :buildtio chapter5 RollTwoPairs PairOfDice.java
-call :buildFXjar chapter5 GrowingCircleAnimation CircleInfo.java
+call :buildjar chapter5 GrowingCircleAnimation CircleInfo.java
 call :buildtio chapter5 HighLow Deck.java Card.java
-call :buildFXjar chapter5 ShapeDraw
-call :buildFXjar chapter6 HelloWorldFX
-call :buildFXjar chapter6 SimpleColorChooser
-call :buildFXjar chapter6 RandomStrings
+call :buildjar chapter5 ShapeDraw
 
-if not "%JAVAC_FX%" == "none" (
-	call :cpfiles chapter6 RandomCards RandomCards.java Card.java Deck.java cards.png
-	cd temp
-	%JAVAC_FX% RandomCards.java
-	%JAR% -cmf manifest RandomCards.jar *.class cards.png
-	move RandomCards.jar ..\compiled-jar-files\chapter6 > nul
-	cd ..
-)
+call :buildjar chapter6 HelloWorldGUI1
+call :buildjar chapter6 HelloWorldGUI2
+call :buildjar chapter6 SimpleColorChooser
+call :buildjar chapter6 RandomStrings RandomStringsPanel.java
+call :buildjar chapter6 ClickableRandomStrings RandomStringsPanel.java
+call :buildjar chapter6 SimpleStamper
+call :buildjar chapter6 SimpleTrackMouse
+call :buildjar chapter6 SimplePaint
+call :buildjar chapter6 RandomArt
+call :buildjar chapter6 KeyboardAndFocusDemo
+call :buildjar chapter6 SubKiller
+call :buildjar chapter6 TextAreaDemo
+call :buildjar chapter6 SliderDemo
+call :buildjar chapter6 BorderDemo
+call :buildjar chapter6 SliderAndButtonDemo
+call :buildjar chapter6 SimpleCalc
+call :buildjar chapter6 NullLayoutDemo
+call :buildjar chapter6 HighLowGUI Card.java Hand.java Deck.java
+call :buildjar chapter6 MosaicDraw MosaicDrawController.java MosaicPanel.java
+call :buildjar chapter6 SimpleDialogDemo
 
-call :buildFXjar chapter6 SimpleTrackMouse
-call :buildFXjar chapter6 SimplePaint
-call :buildFXjar chapter6 KeyboardEventDemo
-call :buildFXjar chapter6 SubKiller
-call :buildFXjar chapter6 TextInputDemo
-call :buildFXjar chapter6 SliderDemo
-call :buildFXjar chapter6 OwnLayoutDemo
-call :buildFXjar chapter6 SimpleCalc
-
-if not "%JAVAC_FX%" == "none" (
-	call :cpfiles chapter6 HighLowGUI HighLowGUI.java cards.png Card.java Hand.java Deck.java
-	cd temp
-	%JAVAC_FX% HighLowGUI.java
-	%JAR% -cmf manifest HighLowGUI.jar *.class cards.png
-	move HighLowGUI.jar ..\compiled-jar-files\chapter6 > nul
-	cd ..
-)
-
-call :buildFXjar chapter6 MosaicDraw MosaicCanvas.java
-call :buildFXjar chapter7 RandomStringsWithArray
+call :buildjar chapter7 RandomStringsWithArray
 call :buildtio chapter7 ReverseWithDynamicArray DynamicArrayOfInt.java
-call :buildFXjar chapter7 SimplePaint2
+call :buildjar chapter7 SimplePaint2
 call :buildtio chapter7 TestSymmetricMatrix SymmetricMatrix.java
 call :buildtio chapter7 RecordDemo Complex.java FullName.java
-call :buildFXjar chapter7 Life MosaicCanvas.java
-call :buildFXjar chapter7 Checkers
+call :buildjar chapter7 Life MosaicCanvas.java
+call :buildjar chapter7 Checkers
 call :buildtio chapter8 LengthConverter2
 call :buildtio chapter8 TryStatementDemo
 call :buildtio chapter9 TowersOfHanoi
-call :buildFXjar chapter9 Maze
-call :buildFXjar chapter9 LittlePentominos MosaicCanvas.java
-call :buildFXjar chapter9 Blobs
+call :buildjar chapter9 Maze
+call :buildjar chapter9 LittlePentominos MosaicCanvas.java
+call :buildjar chapter9 Blobs
 call :buildtio chapter9 ListDemo StringList.java
 call :buildtio chapter9 PostfixEval StackOfDouble.java
-call :buildFXjar chapter9 DepthBreadth
+call :buildjar chapter9 DepthBreadth
 call :buildtio chapter9 SortTreeDemo
 call :buildtio chapter9 SimpleParser1
 call :buildtio chapter9 SimpleParser2
@@ -138,101 +113,106 @@ call :buildtio chapter10 WordCount
 call :buildtio chapter10 RiemannSumStreamExperiment
 call :buildtio chapter11 DirectoryList
 call :buildtio chapter11 PhoneDirectoryFileDemo
-call :buildFXjar chapter11 TrivialEdit
-call :buildFXjar chapter11 SimplePaintWithFiles
+call :buildjar chapter11 TrivialEdit
+call :buildjar chapter11 SimplePaintWithFiles
 call :buildtio chapter11 FetchURL
 call :buildtio chapter11 ShowMyNetwork
 call :buildtio chapter11 DateServer
 call :buildtio chapter11 DateClient
 call :buildtio chapter11 CLChatServer
 call :buildtio chapter11 CLChatClient
-call :buildFXjar chapter11 SimplePaintWithXML
-call :buildFXjar chapter11 XMLDemo
+call :buildjar chapter11 SimplePaintWithXML
+call :buildjar chapter11 XMLDemo
 call :buildtio chapter12 ThreadTest1
 call :buildtio chapter12 ThreadTest2
-call :buildFXjar chapter12 RandomArtWithThreads
-call :buildFXjar chapter12 BackgroundComputationDemo
-call :buildFXjar chapter12 MultiprocessingDemo1
-call :buildFXjar chapter12 MultiprocessingDemo2
-call :buildFXjar chapter12 MultiprocessingDemo3
+call :buildjar chapter12 RandomArtWithThreads
+call :buildjar chapter12 BackgroundComputationDemo
+call :buildjar chapter12 MultiprocessingDemo1
+call :buildjar chapter12 MultiprocessingDemo2
+call :buildjar chapter12 MultiprocessingDemo3
+call :buildjar chapter12 QuicksortThreadDemo
 call :buildtio chapter12 ThreadTest4
-call :buildFXjar chapter12 TowersOfHanoiGUI
-call :buildFXjar chapter12 GUIChat
+call :buildjar chapter12 TowersOfHanoiGUI
+call :buildjar chapter12 GUIChat
 
-if not "%JAVAC_FX%" == "none" (
-	call :cpfiles chapter12 netgame.chat.ChatRoomWindow
-	mkdir temp\netgame
-	xcopy /S /Q chapter12\netgame temp\netgame
-	cd temp
-	%JAVAC_FX% netgame\common\*.java netgame\chat\*.java
-	%JAR% -cmf manifest netgame.chat.ChatRoomWindow.jar netgame\common\*.class netgame\chat\*.class
-	move netgame.chat.ChatRoomWindow.jar ..\compiled-jar-files\chapter12 > nul
-	cd ..
-	
-	call :cpfiles chapter12 netgame.tictactoe.Main 
-	mkdir temp\netgame
-	xcopy /S /Q chapter12\netgame temp\netgame
-	cd temp
-	%JAVAC_FX% netgame\common\*.java netgame\tictactoe\*.java
-	%JAR% -cmf manifest netgame.chat.tictactoe.Main.jar netgame\common\*.class netgame\tictactoe\*.class
-	move netgame.chat.tictactoe.Main.jar ..\compiled-jar-files\chapter12 > nul
-	cd ..
-	
-	call :cpfiles chapter12 netgame.fivecarddraw.Main 
-	mkdir temp\netgame
-	xcopy /S /Q chapter12\netgame temp\netgame
-	cd temp
-	%JAVAC_FX% netgame\common\*.java netgame\fivecarddraw\*.java
-	%JAR% -cmf manifest netgame.chat.fivecarddraw.Main.jar netgame\common\*.class netgame\fivecarddraw\*.class netgame\fivecarddraw\cards.png
-	move netgame.chat.fivecarddraw.Main.jar ..\compiled-jar-files\chapter12 > nul
-	cd ..
-)
+call :cpfiles chapter12 netgame.chat.ChatRoomWindow
+mkdir temp\netgame
+xcopy /S /Q chapter12\netgame temp\netgame
+cd temp
+%JAVAC% netgame\common\*.java netgame\chat\*.java
+%JAR% -cmf manifest netgame.chat.ChatRoomWindow.jar netgame\common\*.class netgame\chat\*.class
+move netgame.chat.ChatRoomWindow.jar ..\compiled-jar-files\chapter12 > nul
+cd ..
 
-call :buildFXjar chapter13 BoundPropertyDemo
-call :buildFXjar chapter13 CanvasResizeDemo
-call :buildFXjar chapter13 StrokeDemo
-call :buildFXjar chapter13 TransformDemo face-smile.png
-call :buildFXjar chapter13 ToolPaint SimpleDialogs.java
-call :buildFXjar chapter13 TestStopWatch StopWatchLabel.java
-call :buildFXjar chapter13 EditListDemo
-call :buildFXjar chapter13 SimpleTableDemo
-call :buildFXjar chapter13 ScatterPlotTableDemo
-call :buildFXjar chapter13 TestDialogs SimpleDialogs.java
-call :buildFXjar chapter13 WebBrowser BrowserWindow.java SimpleDialogs.java
+call :cpfiles chapter12 netgame.tictactoe.Main 
+mkdir temp\netgame
+xcopy /S /Q chapter12\netgame temp\netgame
+cd temp
+%JAVAC% netgame\common\*.java netgame\tictactoe\*.java
+%JAR% -cmf manifest netgame.chat.tictactoe.Main.jar netgame\common\*.class netgame\tictactoe\*.class
+move netgame.chat.tictactoe.Main.jar ..\compiled-jar-files\chapter12 > nul
+cd ..
 
-if not "%JAVAC_FX%" == "none" (
-	call :cpfiles chapter13 TransformDemo TransformDemo.java face-smile.png
-	cd temp
-	%JAVAC_FX% TransformDemo.java
-	%JAR% -cmf manifest TransformDemo.jar *.class *.png
-	move TransformDemo.jar ..\compiled-jar-files\chapter13 > nul
-	cd ..
-	
-	call :cpfiles chapter13 SillyStamper SillyStamper.java 
-	mkdir temp\stamper_icons
-	xcopy /S /Q chapter13\stamper_icons temp\stamper_icons > nul
-	cd temp
-	%JAVAC_FX% SillyStamper.java
-	%JAR% -cmf manifest SillyStamper.jar *.class stamper_icons\*
-	move SillyStamper.jar ..\compiled-jar-files\chapter13 > nul
-	cd ..
-	
-	call :cpfiles chapter13 PaintDemo PaintDemo.java tile.png face-smile.png
-	cd temp
-	%JAVAC_FX% PaintDemo.java
-	%JAR% -cmf manifest PaintDemo.jar *.class *.png
-	move PaintDemo.jar ..\compiled-jar-files\chapter13 > nul
-	cd ..
-	
-	call :cpfiles chapter13 edu.hws.eck.mdbfx.Main 
-	mkdir temp\edu
-	xcopy /S /Q chapter13\edu temp\edu > nul
-	cd temp
-	%JAVAC_FX% edu\hws\eck\mdbfx\*.java
-	%JAR% -cmf manifest edu.hws.eck.mdbfx.Main.jar edu\hws\eck\mdbfx\* edu\hws\eck\mdbfx\examples\* 
-	move edu.hws.eck.mdbfx.Main.jar ..\compiled-jar-files\chapter13 > nul
-	cd ..
-)
+call :cpfiles chapter12 netgame.fivecarddraw.Main 
+mkdir temp\netgame
+xcopy /S /Q chapter12\netgame temp\netgame
+cd temp
+%JAVAC% netgame\common\*.java netgame\fivecarddraw\*.java
+%JAR% -cmf manifest netgame.chat.fivecarddraw.Main.jar netgame\common\*.class netgame\fivecarddraw\*.class netgame\fivecarddraw\cards.png
+move netgame.chat.fivecarddraw.Main.jar ..\compiled-jar-files\chapter12 > nul
+cd ..
+
+call :buildjar chapter13 PaintWithOffScreenCanvas
+call :buildjar chapter13 TransparencyDemo
+call :buildjar chapter13 StrokeDemo
+call :buildjar chapter13 ChoiceDemo
+call :buildjar chapter13 StatesAndCapitalsTableDemo
+call :buildjar chapter13 ScatterPlotTableDemo
+call :buildjar chapter13 SimpleWebBrowserWithThread
+call :buildjar chapter13 SimpleWebBrowser
+call :buildjar chapter13 SimpleRTFEdit
+call :buildjar chapter13 CustomComponentTest StopWatchLabel.java MirrorText.java
+
+call :cpfiles chapter13 SillyStamper SillyStamper.java 
+mkdir temp\stamper_icons
+xcopy /S /Q chapter13\stamper_icons temp\stamper_icons > nul
+cd temp
+%JAVAC% SillyStamper.java
+%JAR% -cmf manifest SillyStamper.jar *.class stamper_icons\*
+move SillyStamper.jar ..\compiled-jar-files\chapter13 > nul
+cd ..
+
+call :cpfiles chapter13 HighLowWithImages HighLowWithImages.java cards.png Card.java Hand.java Deck.java
+cd temp
+%JAVAC% HighLowWithImages.java
+%JAR% -cmf manifest HighLowWithImages.jar *.class cards.png
+move HighLowWithImages.jar ..\compiled-jar-files\chapter13 > nul
+cd ..
+
+call :cpfiles chapter13 PaintDemo PaintDemo.java QueenOfHearts.png TinySmiley.png
+cd temp
+%JAVAC% PaintDemo.java
+%JAR% -cmf manifest PaintDemo.jar *.class *.png
+move PaintDemo.jar ..\compiled-jar-files\chapter13 > nul
+cd ..
+
+call :cpfiles chapter13 SoundAndCursorDemo SoundAndCursorDemo.java 
+mkdir temp\snc_resources
+xcopy /S /Q chapter13\snc_resources temp\snc_resources > nul
+cd temp
+%JAVAC% SoundAndCursorDemo.java
+%JAR% -cmf manifest SoundAndCursorDemo.jar *.class snc_resources\*
+move SoundAndCursorDemo.jar ..\compiled-jar-files\chapter13 > nul
+cd ..
+
+call :cpfiles chapter13 edu.hws.eck.mdb.Main 
+mkdir temp\edu
+xcopy /S /Q chapter13\edu temp\edu > nul
+cd temp
+%JAVAC% edu\hws\eck\mdb\*.java
+%JAR% -cmf manifest edu.hws.eck.mdb.Main.jar edu\hws\eck\mdb\* edu\hws\eck\mdb\examples\* 
+move edu.hws.eck.mdb.Main.jar ..\compiled-jar-files\chapter13 > nul
+cd ..
 
 rmdir /q /s temp
 
@@ -255,15 +235,15 @@ echo chapter12 CLDateServerWithThreadPool -- duplicates functionality of DateSer
 echo chapter12 CLMandelbrotMaster -- needs command line arguments
 echo chapter12 CLMandelbrotWorker -- needs to run on several machines, or needs command-line arguments
 echo.
-if "%JAVAC_FX%" == "none" (
-   echo In addition, no jar files were created for programs that use JavaFX
+if "%JAVAC%" == "none" (
+   echo In addition, no jar files were created for programs that use Java
 ) else (
    echo chapter4  RandomMosaicWalk2 -- duplicates functionality of RandomMosaicWalk
    echo chapter12 MultiprocessorDemo4 -- duplicates the functionality of MultiprocessorDemo3 
-   if not %JAVAC% == %JAVAC_FX% (
+   if not %JAVAC% == %JAVAC% (
       echo.
-      echo Remember that jar files that use JavaFX must be run from the command line,
-      echo using a java command that includes JavaFX options.
+      echo Remember that jar files that use Java must be run from the command line,
+      echo using a java command that includes Java options.
    )
    echo.
    echo Note: Before running chapter13\netgame.chat.ChatRoomWindow.jar, 
@@ -280,10 +260,7 @@ exit /b 0
 REM %1 is chapter: c1, c2, ...
 REM %2 is main class (without .java)
 REM %3,%4,... are other files/directories to be included
-:buildFXjar
-   if "%JAVAC_FX%" == "none" (
-      goto :EOF
-   )
+:buildjar
    if exist temp rmdir /S /Q temp
    mkdir temp
    echo.
@@ -309,7 +286,7 @@ REM %3,%4,... are other files/directories to be included
    :pl
    echo Main-Class: %NAME%> temp\manifest
    cd temp
-   %JAVAC_FX% *.java
+   %JAVAC% *.java
    if not exist %NAME%.class (
       cd ..
       echo Error during compilation!  Build aborted.
